--- a/jobs/panda3d.yml
+++ b/jobs/panda3d.yml
@@ -225,103 +225,103 @@
             arch: winx64
             bison_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\bison'
             build: 'D:\\build\\panda3d'
-            bullet_include: 'D:\\opt\\bullet\\include\\bullet'
-            bullet_library_collision: 'D:\\opt\\bullet\\lib\\BulletCollision.lib'
-            bullet_library_dynamics: 'D:\\opt\\bullet\\lib\\BulletDynamics.lib'
-            bullet_library_math: 'D:\\opt\\bullet\\lib\\LinearMath.lib'
-            bullet_library_softbody: 'D:\\opt\\bullet\\lib\\BulletSoftBody.lib'
-            bullet_root: 'D:\\opt\\bullet'
+            bullet_include: 'D:\\dist\\bullet\\include\\bullet'
+            bullet_library_collision: 'D:\\dist\\bullet\\lib\\BulletCollision.lib'
+            bullet_library_dynamics: 'D:\\dist\\bullet\\lib\\BulletDynamics.lib'
+            bullet_library_math: 'D:\\dist\\bullet\\lib\\LinearMath.lib'
+            bullet_library_softbody: 'D:\\dist\\bullet\\lib\\BulletSoftBody.lib'
+            bullet_root: 'D:\\dist\\bullet'
             flex_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\flex'
-            freetype_cmake: 'D:\\opt\\freetypehb\\lib\\cmake\\freetype'
-            freetype_include: 'D:\\opt\\freetypehb\\include\\freetype2'
-            freetype_library: 'D:\\opt\\freetypehb\\lib\\freetype.lib'
-            freetype_root: 'D:\\opt\\freetypehb'
+            freetype_cmake: 'D:\\dist\\freetypehb\\lib\\cmake\\freetype'
+            freetype_include: 'D:\\dist\\freetypehb\\include\\freetype2'
+            freetype_library: 'D:\\dist\\freetypehb\\lib\\freetype.lib'
+            freetype_root: 'D:\\dist\\freetypehb'
             generator: NMake Makefiles
             git_executable: 'Z:\\Git\\bin\\git.exe'
-            harfbuzz_include: 'D:\\opt\\harfbuzz\\include\\harfbuzz'
-            harfbuzz_library: 'D:\\opt\\harfbuzz\\lib\\harfbuzz.lib'
+            harfbuzz_include: 'D:\\dist\\harfbuzz\\include\\harfbuzz'
+            harfbuzz_library: 'D:\\dist\\harfbuzz\\lib\\harfbuzz.lib'
             have_gl: NO
             have_gtk: NO
             have_x11: NO
-            install: 'D:\\opt\\panda3d'
-            install_python: 'D:\\opt\\panda3d\\lib\\site-packages'
-            interrogate_executable: 'D:\\opt\\interrogate\\bin\\interrogate.exe'
-            interrogate_module_executable: 'D:\\opt\\interrogate\\bin\\interrogate_module.exe'
+            install: 'D:\\dist\\panda3d'
+            install_python: 'D:\\dist\\panda3d\\lib\\site-packages'
+            interrogate_executable: 'D:\\dist\\interrogate\\bin\\interrogate.exe'
+            interrogate_module_executable: 'D:\\dist\\interrogate\\bin\\interrogate_module.exe'
             jpeg_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\include'
             jpeg_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\lib\\libjpeg.lib'
             ldflags: '/FORCE:MULTIPLE'
             make: ''
             node: windows
-            ogg_include: 'D:\\opt\\vorbis\\include'
-            ogg_library: 'D:\\opt\\vorbis\\lib\\ogg.lib'
-            ogg_root: 'D:\\opt\\vorbis'
+            ogg_include: 'D:\\dist\\vorbis\\include'
+            ogg_library: 'D:\\dist\\vorbis\\lib\\ogg.lib'
+            ogg_root: 'D:\\dist\\vorbis'
             openal_cmake: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\cmake\\openal'
             openal_include: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\include'
             openal_library: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\OpenAL32.lib'
             panda3d_thirdparty: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty'
             png_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\include'
             png_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\lib\\libpng.lib'
-            python_executable: 'D:\\opt\\python\\bin\\python3.13t'
-            python_include: 'D:\\opt\\python\\include'
-            python_library: 'D:\\opt\\python\\libs\\python313t.lib'
+            python_executable: 'D:\\dist\\python\\bin\\python3.13t'
+            python_include: 'D:\\dist\\python\\include'
+            python_library: 'D:\\dist\\python\\libs\\python313t.lib'
             python_version: '3.13t'
             python_version_int: '3.13'
             variant: ''
-            vorbisfile_library: 'D:\\opt\\vorbis\\lib\\vorbisfile.lib'
-            vorbis_include: 'D:\\opt\\vorbis\\include'
-            vorbis_library: 'D:\\opt\\vorbis\\lib\\vorbis.lib'
-            vorbis_root: 'D:\\opt\\vorbis'
+            vorbisfile_library: 'D:\\dist\\vorbis\\lib\\vorbisfile.lib'
+            vorbis_include: 'D:\\dist\\vorbis\\include'
+            vorbis_library: 'D:\\dist\\vorbis\\lib\\vorbis.lib'
+            vorbis_root: 'D:\\dist\\vorbis'
             zlib_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\include'
             zlib_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\lib\\libz_st.lib'
         - 'panda3d{variant}-{arch}':
             arch: winx64
             bison_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\bison'
             build: 'D:\\build\\panda3dnt'
-            bullet_include: 'D:\\opt\\bullet\\include\\bullet'
-            bullet_library_collision: 'D:\\opt\\bullet\\lib\\BulletCollision.lib'
-            bullet_library_dynamics: 'D:\\opt\\bullet\\lib\\BulletDynamics.lib'
-            bullet_library_math: 'D:\\opt\\bullet\\lib\\LinearMath.lib'
-            bullet_library_softbody: 'D:\\opt\\bullet\\lib\\BulletSoftBody.lib'
-            bullet_root: 'D:\\opt\\bullet'
+            bullet_include: 'D:\\dist\\bullet\\include\\bullet'
+            bullet_library_collision: 'D:\\dist\\bullet\\lib\\BulletCollision.lib'
+            bullet_library_dynamics: 'D:\\dist\\bullet\\lib\\BulletDynamics.lib'
+            bullet_library_math: 'D:\\dist\\bullet\\lib\\LinearMath.lib'
+            bullet_library_softbody: 'D:\\dist\\bullet\\lib\\BulletSoftBody.lib'
+            bullet_root: 'D:\\dist\\bullet'
             flex_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\flex'
-            freetype_cmake: 'D:\\opt\\freetypehb\\lib\\cmake\\freetype'
-            freetype_include: 'D:\\opt\\freetypehb\\include\\freetype2'
-            freetype_library: 'D:\\opt\\freetypehb\\lib\\freetype.lib'
-            freetype_root: 'D:\\opt\\freetypehb'
+            freetype_cmake: 'D:\\dist\\freetypehb\\lib\\cmake\\freetype'
+            freetype_include: 'D:\\dist\\freetypehb\\include\\freetype2'
+            freetype_library: 'D:\\dist\\freetypehb\\lib\\freetype.lib'
+            freetype_root: 'D:\\dist\\freetypehb'
             generator: NMake Makefiles
             git_executable: 'Z:\\Git\\bin\\git.exe'
-            harfbuzz_include: 'D:\\opt\\harfbuzz\\include\\harfbuzz'
-            harfbuzz_library: 'D:\\opt\\harfbuzz\\lib\\harfbuzz.lib'
+            harfbuzz_include: 'D:\\dist\\harfbuzz\\include\\harfbuzz'
+            harfbuzz_library: 'D:\\dist\\harfbuzz\\lib\\harfbuzz.lib'
             have_gl: NO
             have_gtk: NO
             have_x11: NO
-            install: 'D:\\opt\\panda3dnt'
-            install_python: 'D:\\opt\\panda3dnt\\lib\\site-packages'
-            interrogate_executable: 'D:\\opt\\interrogatent\\bin\\interrogate.exe'
-            interrogate_module_executable: 'D:\\opt\\interrogatent\\bin\\interrogate_module.exe'
+            install: 'D:\\dist\\panda3dnt'
+            install_python: 'D:\\dist\\panda3dnt\\lib\\site-packages'
+            interrogate_executable: 'D:\\dist\\interrogatent\\bin\\interrogate.exe'
+            interrogate_module_executable: 'D:\\dist\\interrogatent\\bin\\interrogate_module.exe'
             jpeg_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\include'
             jpeg_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\lib\\libjpeg.lib'
             ldflags: '/FORCE:MULTIPLE'
             make: ''
             node: windows
-            ogg_include: 'D:\\opt\\vorbis\\include'
-            ogg_library: 'D:\\opt\\vorbis\\lib\\ogg.lib'
-            ogg_root: 'D:\\opt\\vorbis'
+            ogg_include: 'D:\\dist\\vorbis\\include'
+            ogg_library: 'D:\\dist\\vorbis\\lib\\ogg.lib'
+            ogg_root: 'D:\\dist\\vorbis'
             openal_cmake: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\cmake\\openal'
             openal_include: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\include'
             openal_library: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\OpenAL32.lib'
             panda3d_thirdparty: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty'
             png_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\include'
             png_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\lib\\libpng.lib'
-            python_executable: 'D:\\opt\\pythonnt\\bin\\python'
-            python_include: 'D:\\opt\\pythonnt\\include'
-            python_library: 'D:\\opt\\pythonnt\\libs\\python312.lib'
+            python_executable: 'D:\\dist\\pythonnt\\bin\\python'
+            python_include: 'D:\\dist\\pythonnt\\include'
+            python_library: 'D:\\dist\\pythonnt\\libs\\python312.lib'
             python_version: '3.12'
             python_version_int: '3.12'
             variant: nt
-            vorbisfile_library: 'D:\\opt\\vorbis\\lib\\vorbisfile.lib'
-            vorbis_include: 'D:\\opt\\vorbis\\include'
-            vorbis_library: 'D:\\opt\\vorbis\\lib\\vorbis.lib'
-            vorbis_root: 'D:\\opt\\vorbis'
+            vorbisfile_library: 'D:\\dist\\vorbis\\lib\\vorbisfile.lib'
+            vorbis_include: 'D:\\dist\\vorbis\\include'
+            vorbis_library: 'D:\\dist\\vorbis\\lib\\vorbis.lib'
+            vorbis_root: 'D:\\dist\\vorbis'
             zlib_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\include'
             zlib_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\lib\\libz_st.lib'
