--- a/jobs/sdk.yml
+++ b/jobs/sdk.yml
@@ -117,9 +117,9 @@
           xcopy /I /E /Y {python_dir}\include  {install}\include
           xcopy /I /E /Y {python_dir}\lib      {install}\lib
           xcopy /I /E /Y {python_dir}\libs     {install}\libs
-          xcopy /I /E /Y D:\opt\sdl\bin        {install}\bin
-          xcopy /I /E /Y D:\opt\sdl\include    {install}\include
-          xcopy /I /E /Y D:\opt\sdl\lib        {install}\lib
+          xcopy /I /E /Y D:\dist\sdl\bin        {install}\bin
+          xcopy /I /E /Y D:\dist\sdl\include    {install}\include
+          xcopy /I /E /Y D:\dist\sdl\lib        {install}\lib
           xcopy /I /E /Y discord\c             {install}\include
           copy /V /Y discord\lib\x86_64\*.dll  {install}\bin
           copy /V /Y %CWD%\jobs\sdk\METADATA   {install}\lib\site-packages\panda3d-1.11.0.dist-info
@@ -162,24 +162,24 @@
       - 'sdk{variant}-winx64':
           build: 'D:\\build\\sdk'
           discord_version: '3.2.1'
-          install: 'D:\\opt\\sdk'
-          install_shared: 'Z:\\opt\\sdk'
-          kphys_dir: 'D:\\opt\\panda3d-kphys'
-          krender_dir: 'D:\\opt\\panda3d-krender'
-          panda3d_dir: 'D:\\opt\\panda3d'
-          python_dir: 'D:\\opt\\python'
+          install: 'D:\\dist\\sdk'
+          install_shared: 'Z:\\dist\\sdk'
+          kphys_dir: 'D:\\dist\\panda3d-kphys'
+          krender_dir: 'D:\\dist\\panda3d-krender'
+          panda3d_dir: 'D:\\dist\\panda3d'
+          python_dir: 'D:\\dist\\python'
           python_app_version: '3.13t'
           python_version: '3.13t'
           variant: ''
       - 'sdk{variant}-winx64':
           build: 'D:\\build\\sdknt'
           discord_version: '3.2.1'
-          install: 'D:\\opt\\sdknt'
-          install_shared: 'Z:\\opt\\sdknt'
-          kphys_dir: 'D:\\opt\\panda3dnt-kphys'
-          krender_dir: 'D:\\opt\\panda3dnt-krender'
-          panda3d_dir: 'D:\\opt\\panda3dnt'
-          python_dir: 'D:\\opt\\pythonnt'
+          install: 'D:\\dist\\sdknt'
+          install_shared: 'Z:\\dist\\sdknt'
+          kphys_dir: 'D:\\dist\\panda3dnt-kphys'
+          krender_dir: 'D:\\dist\\panda3dnt-krender'
+          panda3d_dir: 'D:\\dist\\panda3dnt'
+          python_dir: 'D:\\dist\\pythonnt'
           python_app_version: ''
           python_version: '3.12'
           variant: nt
