--- a/jobs/panda3d-extras.yml
+++ b/jobs/panda3d-extras.yml
@@ -91,42 +91,42 @@
         - 'panda3d{variant}-{module}-{arch}':
             arch: winx64
             build: 'D:\\build\\panda3d-kphys'
-            bullet_dir: 'D:\\opt\\bullet\\'
+            bullet_dir: 'D:\\dist\\bullet\\'
             desc: Physics extensions for Panda3D
             generator: NMake Makefiles
-            install: 'D:\\opt\\panda3d-kphys\\lib\site-packages'
-            interrogate_executable: 'D:\\opt\\interrogate\\bin\\interrogate'
-            interrogate_library: 'D:\\opt\\interrogate\\lib'
-            interrogate_module_executable: 'D:\\opt\\interrogate\\bin\\interrogate_module'
+            install: 'D:\\dist\\panda3d-kphys\\lib\site-packages'
+            interrogate_executable: 'D:\\dist\\interrogate\\bin\\interrogate'
+            interrogate_library: 'D:\\dist\\interrogate\\lib'
+            interrogate_module_executable: 'D:\\dist\\interrogate\\bin\\interrogate_module'
             interrogate_source: 'D:\\jenkins\\workspace\\interrogate-winx64'
             make: ''
             module: kphys
             node: windows
-            panda3d_dir: 'D:\\opt\\panda3d\\'
-            python_executable: 'D:\\opt\\python\\bin\\python3.13t'
-            python_include: 'D:\\opt\\python\\include'
-            python_library: 'D:\\opt\\python\\libs\\python313t.lib'
+            panda3d_dir: 'D:\\dist\\panda3d\\'
+            python_executable: 'D:\\dist\\python\\bin\\python3.13t'
+            python_include: 'D:\\dist\\python\\include'
+            python_library: 'D:\\dist\\python\\libs\\python313t.lib'
             variant: ''
             version: '0.7.11'
             with_tests: OFF
         - 'panda3d{variant}-{module}-{arch}':
             arch: winx64
             build: 'D:\\build\\panda3dnt-kphys'
-            bullet_dir: 'D:\\opt\\bullet\\'
+            bullet_dir: 'D:\\dist\\bullet\\'
             desc: Physics extensions for Panda3D
             generator: NMake Makefiles
-            install: 'D:\\opt\\panda3dnt-kphys\\lib\site-packages'
-            interrogate_executable: 'D:\\opt\\interrogatent\\bin\\interrogate'
-            interrogate_library: 'D:\\opt\\interrogatent\\lib'
-            interrogate_module_executable: 'D:\\opt\\interrogatent\\bin\\interrogate_module'
+            install: 'D:\\dist\\panda3dnt-kphys\\lib\site-packages'
+            interrogate_executable: 'D:\\dist\\interrogatent\\bin\\interrogate'
+            interrogate_library: 'D:\\dist\\interrogatent\\lib'
+            interrogate_module_executable: 'D:\\dist\\interrogatent\\bin\\interrogate_module'
             interrogate_source: 'D:\\jenkins\\workspace\\interrogatent-winx64'
             make: ''
             module: kphys
             node: windows
-            panda3d_dir: 'D:\\opt\\panda3dnt\\'
-            python_executable: 'D:\\opt\\pythonnt\\bin\\python'
-            python_include: 'D:\\opt\\pythonnt\\include'
-            python_library: 'D:\\opt\\pythonnt\\libs\\python312.lib'
+            panda3d_dir: 'D:\\dist\\panda3dnt\\'
+            python_executable: 'D:\\dist\\pythonnt\\bin\\python'
+            python_include: 'D:\\dist\\pythonnt\\include'
+            python_library: 'D:\\dist\\pythonnt\\libs\\python312.lib'
             variant: nt
             version: '0.7.11'
             with_tests: OFF
@@ -175,42 +175,42 @@
         - 'panda3d{variant}-{module}-{arch}':
             arch: winx64
             build: 'D:\\build\\panda3d-krender'
-            bullet_dir: 'D:\\opt\\bullet\\'
+            bullet_dir: 'D:\\dist\\bullet\\'
             desc: Custom Deferred Render Pipeline for Panda3D
             generator: NMake Makefiles
-            install: 'D:\\opt\\panda3d-krender\\lib\site-packages'
-            interrogate_executable: 'D:\\opt\\interrogate\\bin\\interrogate'
-            interrogate_library: 'D:\\opt\\interrogate\\lib'
-            interrogate_module_executable: 'D:\\opt\\interrogate\\bin\\interrogate_module'
+            install: 'D:\\dist\\panda3d-krender\\lib\site-packages'
+            interrogate_executable: 'D:\\dist\\interrogate\\bin\\interrogate'
+            interrogate_library: 'D:\\dist\\interrogate\\lib'
+            interrogate_module_executable: 'D:\\dist\\interrogate\\bin\\interrogate_module'
             interrogate_source: 'D:\\jenkins\\workspace\\interrogate-winx64'
             make: ''
             module: krender
             node: windows
-            panda3d_dir: 'D:\\opt\\panda3d\\'
-            python_executable: 'D:\\opt\\python\\bin\\python3.13t'
-            python_include: 'D:\\opt\\python\\include'
-            python_library: 'D:\\opt\\python\\libs\\python313t.lib'
+            panda3d_dir: 'D:\\dist\\panda3d\\'
+            python_executable: 'D:\\dist\\python\\bin\\python3.13t'
+            python_include: 'D:\\dist\\python\\include'
+            python_library: 'D:\\dist\\python\\libs\\python313t.lib'
             variant: ''
             version: '0.2.11'
             with_tests: OFF
         - 'panda3d{variant}-{module}-{arch}':
             arch: winx64
             build: 'D:\\build\\panda3dnt-krender'
-            bullet_dir: 'D:\\opt\\bullet\\'
+            bullet_dir: 'D:\\dist\\bullet\\'
             desc: Custom Deferred Render Pipeline for Panda3D
             generator: NMake Makefiles
-            install: 'D:\\opt\\panda3dnt-krender\\lib\site-packages'
-            interrogate_executable: 'D:\\opt\\interrogatent\\bin\\interrogate'
-            interrogate_library: 'D:\\opt\\interrogatent\\lib'
-            interrogate_module_executable: 'D:\\opt\\interrogatent\\bin\\interrogate_module'
+            install: 'D:\\dist\\panda3dnt-krender\\lib\site-packages'
+            interrogate_executable: 'D:\\dist\\interrogatent\\bin\\interrogate'
+            interrogate_library: 'D:\\dist\\interrogatent\\lib'
+            interrogate_module_executable: 'D:\\dist\\interrogatent\\bin\\interrogate_module'
             interrogate_source: 'D:\\jenkins\\workspace\\interrogate-winx64'
             make: ''
             module: krender
             node: windows
-            panda3d_dir: 'D:\\opt\\panda3dnt\\'
-            python_executable: 'D:\\opt\\pythonnt\\bin\\python'
-            python_include: 'D:\\opt\\pythonnt\\include'
-            python_library: 'D:\\opt\\pythonnt\\libs\\python312.lib'
+            panda3d_dir: 'D:\\dist\\panda3dnt\\'
+            python_executable: 'D:\\dist\\pythonnt\\bin\\python'
+            python_include: 'D:\\dist\\pythonnt\\include'
+            python_library: 'D:\\dist\\pythonnt\\libs\\python312.lib'
             variant: nt
             version: '0.2.11'
             with_tests: OFF
