--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     volumes:
       - .:/var/opt/kitsunetsuki-sdk:z
       - ~/Dev/Panda3D:/root/Dev/Panda3D:z
-      - ~/var/mnt/games/steamapps/common/Blender:/root/Blender:z
+      - /var/mnt/games/steamapps/common/Blender:/root/Blender:z
       - ~/Public:/root/Public:z
     command: bash -c "mkdir /run/sshd && /usr/sbin/sshd -D"
     network_mode: "slirp4netns:allow_host_loopback=true"
