--- a/jobs/realsense.yml
+++ b/jobs/realsense.yml
@@ -53,10 +53,10 @@
             build: /var/opt/kitsunetsuki-sdk/build/realsense
             generator: Unix Makefiles
             install: /var/opt/kitsunetsuki-sdk/dist/realsense
-            install_python: /var/opt/kitsunetsuki-sdk/dist/realsense/lib/python3.12/site-packages
+            install_python: /var/opt/kitsunetsuki-sdk/dist/realsense/lib/python3.12/site-packages/realsense
             make: '-j 16'
             python_executable: /var/opt/kitsunetsuki-sdk/dist/pythonnt/bin/python3.12
             python_include: /var/opt/kitsunetsuki-sdk/dist/pythonnt/include/python3.12
             python_library: /var/opt/kitsunetsuki-sdk/dist/pythonnt/lib/libpython3.12.so.1.0
             python_version: '3.12'
-            version: '2.55.1'
+            version: '2.57.2'
